<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:useDefaultMargins="true"
    tools:context="ru.solandme.smarttipcalculator.MainActivity">

    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="number"
        android:maxLength="6" />

    <TextView
        android:id="@+id/amountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:background="@color/amount_background"
        android:elevation="@dimen/elevation"
        android:layout_gravity="fill_horizontal"
        android:hint="@string/enter_amount"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/percentTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|end"
        android:text="@string/tip_percentage"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/percentSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/seekbar_height"
        android:layout_gravity="fill_horizontal"
        android:indeterminate="false"
        android:max="30"
        android:progress="15" />

    <TextView
        android:id="@+id/tipLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/tip"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center"
        android:layout_gravity="fill_horizontal"
        android:background="@color/result_background"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"/>

    <TextView
        android:id="@+id/totalLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/total"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="fill_horizontal"
        android:gravity="center"
        android:background="@color/result_background"
        android:padding="@dimen/textview_padding"
        android:elevation="@dimen/elevation"/>

</GridLayout>
